syntax = "proto3";

option csharp_namespace = "MfaSrv.Protocol.EndpointAgent";

package mfasrv.endpointagent;

import "google/protobuf/timestamp.proto";

// Service exposed by Endpoint Agent for local Credential Provider
service EndpointAgentService {
  // Pre-authentication check before credentials are submitted
  rpc PreAuthenticate (PreAuthRequest) returns (PreAuthResponse);

  // Submit MFA response from Credential Provider UI
  rpc SubmitMfa (SubmitMfaRequest) returns (SubmitMfaResponse);

  // Get challenge status (polling from Credential Provider)
  rpc GetChallengeStatus (GetChallengeStatusRequest) returns (GetChallengeStatusResponse);
}

message PreAuthRequest {
  string user_name = 1;
  string domain = 2;
  string workstation = 3;
}

message PreAuthResponse {
  bool mfa_required = 1;
  string challenge_id = 2;
  string method = 3;
  string user_prompt = 4;
  google.protobuf.Timestamp expires_at = 5;
}

message SubmitMfaRequest {
  string challenge_id = 1;
  string response = 2;
}

message SubmitMfaResponse {
  bool success = 1;
  string error = 2;
}

message GetChallengeStatusRequest {
  string challenge_id = 1;
}

message GetChallengeStatusResponse {
  string status = 1;
  bool completed = 2;
  bool success = 3;
  string error = 4;
}
